refactor OcppServer to implement SmartLifecycle